add code and project pages to homepage

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<div class="desc">
 						<a rel="external" href="https://arxiv.org/abs/2401.02445" target="_blank"><h2>Social and Economic Impact Analysis of Solar Mini-Grids in Rural Africa: A Cohort Study from Kenya and Nigeria</h2></a><br>
 						Amy Carabajal, Akoua Orsot, Pelagie Moudio, Tracy Haggai, Chioma Okonkwo, Trey Jarrard, and Nicholas Selby<br>
-						<a rel="external" href="https://iopscience.iop.org/journal/2634-4505" target="_blank">Environmental Research: Infrastructure and Sustainability</a>, 2023<br>
+						<a class="journal-name" rel="external" href="https://iopscience.iop.org/journal/2634-4505" target="_blank">Environmental Research: Infrastructure and Sustainability</a>, 2023<br>
 						<i>Under Review.</i>
 						<!-- <a href="homepage/minigrid-impact.bib" aria-label="BibTeX for paper titled &quot;Social and Economic Impact Analysis of Solar Mini-Grids in Rural Africa: A Cohort Study from Kenya and Nigeria&quot;" target="_blank">BibTeX</a> -->
 					</div>
@@ -97,8 +97,8 @@
 					<div class="desc">
 						<a rel="external" href="https://arxiv.org/abs/2104.02004" target="_blank"><h2>Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation</h2></a><br>
 						Nicholas Selby and Harry Asada<br>
-						<a rel="external" href="http://www.ieee-ras.org/publications/ra-l" target="_blank">IEEE Robotics and Automation Letters</a> 6 (4), 6297–6304, 2021<br>
-						<a href="homepage/l3.bib" aria-label="BibTeX for paper titled &quot;Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation&quot;" target="_blank">BibTeX</a>
+						<a class="journal-name" rel="external" href="http://www.ieee-ras.org/publications/ra-l" target="_blank">IEEE Robotics and Automation Letters</a> 6 (4), 6297–6304, 2021<br>
+						[<a href="homepage/l3.bib" aria-label="BibTeX for paper titled &quot;Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation&quot;" target="_blank">BibTeX</a>] [<a href="https://github.com/Darbeloff/DFL" rel="external" target="_blank" aria-label="Code repository for paper titled &quot;Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation&quot;">code</a>] [<a href="dfl.html" aria-label="Project page for paper titled &quot;Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation&quot;">project page</a>]
 					</div>
 				</article>
 	
@@ -109,8 +109,8 @@
 					<div class="desc">
 						<a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank"><h2>TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work</h2></a><br>
 						Nicholas Selby, Jerry Ng, Glenda S Stump, George Westerman, Claire Traweek, and Harry Asada<br>
-						<a rel="external" href="https://www.sciencedirect.com/journal/heliyon" target="_blank">Heliyon</a> 7 (7), e07583, 2021<br>
-						<a href="homepage/teachbot.bib" aria-label="BibTeX for paper titled &quot;TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work&quot;" target="_blank">BibTeX</a>
+						<a class="journal-name" rel="external" href="https://www.sciencedirect.com/journal/heliyon" target="_blank">Heliyon</a> 7 (7), e07583, 2021<br>
+						[<a href="homepage/teachbot.bib" aria-label="BibTeX for paper titled &quot;TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work&quot;" target="_blank">BibTeX</a>] [<a rel="external" href="https://github.com/Darbeloff/TeachBot" aria-label="Code repository for paper titled &quot;TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work&quot;" target="_blank">code</a>] [<a href="teachbot.html" aria-label="Project page for paper titled &quot;TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work&quot;">project page</a>]
 					</div>
 				</article>
 	
@@ -121,8 +121,8 @@
 					<div class="desc">
 						<a rel="external" href="http://www.mit.edu/~fadel/papers/RFind-paper.pdf" download target="_blank"><h2>Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags</h2></a><br>
 						Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
-						<a rel="external" href="https://sigmobile.org/mobicom/2017/" target="_blank">International Conference on Mobile Computing and Networking</a>, Snowbird, UT, USA, 2017<br>
-						<a href="homepage/rfind.bib" aria-label="BibTeX for paper titled &quot;Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags&quot;" target="_blank">BibTeX</a>
+						<a class="journal-name" rel="external" href="https://sigmobile.org/mobicom/2017/" target="_blank">International Conference on Mobile Computing and Networking</a>, Snowbird, UT, USA, 2017<br>
+						[<a href="homepage/rfind.bib" aria-label="BibTeX for paper titled &quot;Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags&quot;" target="_blank">BibTeX</a>] [<a href="rfind.html" aria-label="Project page for paper titled &quot;Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags&quot;">project page</a>]
 					</div>
 				</article>
 	
@@ -133,8 +133,8 @@
 					<div class="desc">
 						<a rel="external" href="http://www.mit.edu/~fadel/papers/RFly-paper.pdf" download target="_blank"><h2>Relays for Battery-Free Networks</h2></a><br>
 						Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
-						<a rel="external" href="http://conferences.sigcomm.org/sigcomm/2017/" target="_blank">ACM Conference on Applications, Technologies, Architectures, and Protocols for Computer Communication</a>, Los Angeles, CA, USA, 2017<br>
-						<a href="homepage/rfly.bib" aria-label="BibTeX for paper titled &quot;Drone Relays for Battery-Free Networks&quot;" target="_blank">BibTeX</a>
+						<a class="journal-name" rel="external" href="http://conferences.sigcomm.org/sigcomm/2017/" target="_blank">ACM Conference on Applications, Technologies, Architectures, and Protocols for Computer Communication</a>, Los Angeles, CA, USA, 2017<br>
+						[<a href="homepage/rfly.bib" aria-label="BibTeX for paper titled &quot;Drone Relays for Battery-Free Networks&quot;" target="_blank">BibTeX</a>] [<a href="rfly.html" aria-label="Project page for paper titled &quot;Drone Relays for Battery-Free Networks&quot;" target="_blank">project page</a>]
 					</div>
 				</article>
 	
@@ -145,8 +145,8 @@
 					<div class="desc">
 						<a href="homepage/xducer.pdf" download target="_blank"><h2>Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers</h2></a><br>
 						David Torello, Nicholas Selby, Jin-Yeon Kim, Jianmin Qu, and Laurence J. Jacobs<br>
-						<a rel="external" href="https://www.journals.elsevier.com/ultrasonics" target="_blank">Ultrasonics</a> 81, 107–117, 2017<br>
-						<a href="homepage/xducer.bib" aria-label="BibTeX for paper titled &quot;Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers&quot;" target="_blank">BibTeX</a>
+						<a class="journal-name" rel="external" href="https://www.journals.elsevier.com/ultrasonics" target="_blank">Ultrasonics</a> 81, 107–117, 2017<br>
+						[<a href="homepage/xducer.bib" aria-label="BibTeX for paper titled &quot;Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers&quot;" target="_blank">BibTeX</a>] [<a href="ndte.html" aria-label="Project page for paper titled &quot;Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers&quot;">project page</a>]
 					</div>
 				</article>
 	
@@ -157,8 +157,8 @@
 					<div class="desc">
 						<a href="homepage/dualaxis.pdf" download target="_blank"><h2><i>In Situ</i> Biaxial Rotation at Low-Temperatures in High Magnetic Fields</h2></a><br>
 						Nicholas Selby, Matthew Crawford, Lisa Tracy, John L. Reno, and Wei Pan<br>
-						<a rel="external" href="https://aip.scitation.org/journal/rsi" target="_blank">Review of Scientific Instruments</a> 85 (9), 095116, 2014<br>
-						<a href="homepage/dualaxis.bib" aria-label="BibTeX for paper titled &quot;In Situ Biaxial Rotation at Low-Temperatures in High Magnetic Fields&quot;" target="_blank">BibTeX</a>
+						<a class="journal-name" rel="external" href="https://aip.scitation.org/journal/rsi" target="_blank">Review of Scientific Instruments</a> 85 (9), 095116, 2014<br>
+						[<a href="homepage/dualaxis.bib" aria-label="BibTeX for paper titled &quot;In Situ Biaxial Rotation at Low-Temperatures in High Magnetic Fields&quot;" target="_blank">BibTeX</a>] [<a href="lowtemp.html" aria-label="Project page for paper titled &quot;In Situ Biaxial Rotation at Low-Temperatures in High Magnetic Fields&quot;">project page</a>]
 					</div>
 				</article>
 			</details>
