--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -244,6 +244,11 @@
 						<td>Mzuri</td>
 					</tr>
 					<tr>
+						<td>Umeshinda mzuri</td>
+						<td>Did you win well?</td>
+						<td>Mzuri/Ndio</td>
+					</tr>
+					<tr>
 						<td>Umelalaje</td>
 						<td>How did you sleep?</td>
 						<td>Mzuri</td>
