--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -532,7 +532,7 @@
 
 			<figure>
 				<img class="img-center" src="blog-posts/kenya-holi.jpg" alt="My friends and I celebrating holi" style="width: 15cm;">
-				<figcaption>Kenya, with the eighth most ethnically diverse population in the world, is a hub for vibrant cultural celebrations.</figcaption>
+				<figcaption>Kenya, with the eighth-most ethnically diverse population in the world, is a hub for vibrant cultural celebrations.</figcaption>
 			</figure>
 
 			<h3>Adventuring Around Kenya</h3>
@@ -580,7 +580,7 @@
 
 			<p>If you decide to engage in recreational drug use, especially with synthetic substances like MDMA, it is crucial to use test kits. I've never heard of anyone having any problems with natural drugs like cannabis or psilocybin mushrooms, but synthetic drugs can vary widely in composition and purity levels. Unfortunately, I am unaware of any local sources for reagent test kits in Kenya. It may be advisable to acquire them from abroad and bring them with you when traveling.</p>
 
-			<p>Bush weed, locally cultivated cannabis, is readily available. It is often considered less expensive and of lower quality compared to imported strains. Many recreational drugs in Kenya are indeed imported. In Nairobi, you can easily come across a variety of cannabis, sometimes referred to as bhang or banga, as well as a few strains of psilocybin mushrooms and MDMA. More niche or specialized substances are generally harder to find.</p>
+			<p>Bush weed, locally cultivated cannabis, is readily available. It is often considered less expensive and of lower quality compared to imported strains. Many recreational drugs in Kenya are indeed imported. In Nairobi, you can easily come across a variety of cannabis, sometimes referred to as bhang or banga, as well as a few strains of psilocybin mushrooms. MDMA, while also readily available, is frequently cut with speed. More niche or specialized substances are generally harder to find.</p>
 		</section>
 
 		<section id="Safaris">
