"Personal Website" and "Renewvia"

--- a/business-card.html
+++ b/business-card.html
@@ -54,7 +54,7 @@
 
 		<a class="contact" href="https://rupumped.github.io/" target="_blank">
 			<img alt="Website icon" src="business-card/icon-website.jpg">
-			<p>rupumped.github.io</p>
+			<p>Personal Website</p>
 		</a>
 
 		<a rel="external" class="contact" href="https://goo.gl/maps/MaFEdxeVpEvhab946" target="_blank">
