--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		</div>
 
 		<div id="bio" class="section">
-			I am the VP of Engineering at Renewvia Energy. I am responsible for the design, procurement, construction, productive use, and software infrastructure of solar mini-grids in rural Kenya and Nigeria. I have a B.S. in Mechanical Engineering from the Georgia Institute of Technology, an M.S. in Mechanical Engineering from MIT, and a Ph.D. in Electrical Engineering and Computer Science from MIT. I have worked as a research engineer for NASA's Jet Propulsion Laboratory and Sandia National Laboratories.
+			I am the VP of Engineering at Renewvia. I am responsible for the design, procurement, construction, productive use, and software infrastructure of solar mini-grids in rural Kenya and Nigeria. I have a B.S. in Mechanical Engineering from the Georgia Institute of Technology, an M.S. in Mechanical Engineering from MIT, and a Ph.D. in Electrical Engineering and Computer Science from MIT. I have worked as a research engineer for NASA's Jet Propulsion Laboratory and Sandia National Laboratories.
 		</div>
 
 		<section id="publications">
