impact paper published

--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
 					<div class="desc">
 						<a rel="external" href="https://arxiv.org/abs/2401.02445" target="_blank"><h2>Social and Economic Impact Analysis of Solar Mini-Grids in Rural Africa: A Cohort Study from Kenya and Nigeria</h2></a><br>
 						Amy Carabajal, Akoua Orsot, Pelagie Moudio, Tracy Haggai, Chioma Okonkwo, Trey Jarrard, and Nicholas Selby<br>
-						<a class="journal-name" rel="external" href="https://iopscience.iop.org/journal/2634-4505" target="_blank">Environmental Research: Infrastructure and Sustainability</a>, 2023<br>
-						<i>Under Review.</i>
-						<!-- <a href="homepage/minigrid-impact.bib" aria-label="BibTeX for paper titled &quot;Social and Economic Impact Analysis of Solar Mini-Grids in Rural Africa: A Cohort Study from Kenya and Nigeria&quot;" target="_blank">BibTeX</a> -->
+						<a class="journal-name" rel="external" href="https://iopscience.iop.org/journal/2634-4505" target="_blank">Environmental Research: Infrastructure and Sustainability</a>, 2024<br>
+						[<a href="homepage/minigrid-impact.bib" aria-label="BibTeX for paper titled &quot;Social and Economic Impact Analysis of Solar Mini-Grids in Rural Africa: A Cohort Study from Kenya and Nigeria&quot;" target="_blank">BibTeX</a>] [<a href="https://github.com/Renewvia-Energy/impact-analysis" rel="external" target="_blank" aria-label="Code and data repository for paper titled &quot;Social and Economic Impact Analysis of Solar Mini-Grids in Rural Africa: A Cohort Study from Kenya and Nigeria&quot;">data</a>]
 					</div>
 				</article>
 	
