--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -163,9 +163,12 @@
 				<li><a rel="external" target="_blank" href="https://craftychameleon.co.ke/">Crafty Chameleon</a>: beer garden</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food in downtown with open-roof seating</li>
 				<li><a rel="external" target="_blank" href="http://www.havana.co.ke/">Havana</a>: Mexican-Kenyan fusion with creative tacos</li>
+				<li><a rel="external" target="_blank" href="https://www.chimekhouse.com/">Chemek</a>: Korean</li>
 				<li><a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>: my favorite coworking cafe</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/aeuH6A6XGcEameQQ8">Chinatown</a></li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/NTZ3LAKrbhX81ncC9">Cultiva</a>: maybe the tastiest restaurant in Nairobi</li>
+				<li><a rel="external" target="_blank" href="http://sushimitsuki.com/">Sushi Mitsuki</a>: authentic sushi, very expensive</li>
+				<li><a rel="external" target="_blank" href="https://www.hemingways-collection.com/nairobi/dining/">Hemmingway's</a>: bottomless brunch</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/WwwJhTdNbiT8zCFF9">Yolo Ice Cream</a>: popular dessert hangout with massive portions</li>
 				<li>I eat lunch almost every day at a kibanda, or street food stall, down the street from my house. I get a mix of beans, cabbage, hot peppers, cut chapati, and sliced avocado with a cup of chai for about $1.</li>
 			</ul>
