--- a/power-vs-energy.html
+++ b/power-vs-energy.html
@@ -264,7 +264,7 @@
 						\notag
 					\end{equation}
 				</div>
-				<p>Alternatively, notice that the shape formed by the time axis, \(\mathrm{P}(t)\), and the limits of integration is a triangle with a base of 3 hours and a height of 6 kW. The area of that triangle, and therefore the integral, is \(\frac{1}{2}\times(3\ \mathrm{hr})\times(6\ \mathrm{kW}) = 9\ \mathrm{kWh}\). Alternatively, notice that the time average of power over the period is 3 kW, so the integral is product of the average of the integrand, 3 kW, and the duration, 3 hours, or \((3\ \mathrm{kW})\times(3\ \mathrm{hr}) = 9\ \mathrm{kWh}\).</p>
+				<p>Alternatively, notice that the shape formed by the time axis, \(\mathrm{P}(t)\), and the limits of integration is a triangle with a base of 3 hours and a height of 6 kW. The area of that triangle, and therefore the integral, is \(\frac{1}{2}\times(3\ \mathrm{hr})\times(6\ \mathrm{kW}) = 9\ \mathrm{kWh}\). Alternatively, notice that the time average of power over the period is 3 kW, so the integral is the product of the average of the integrand, 3 kW, and the duration, 3 hours, or \((3\ \mathrm{kW})\times(3\ \mathrm{hr}) = 9\ \mathrm{kWh}\).</p>
 			</details>
 			
 			<details class="question">
