--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
 				<img src="blog/phishing.jpg" alt="A fishhook and an at symbol (@)">
 				<div>
 					<h2>Phishing Prevention on a Budget: How to Test and Train Your Employees for Free</h2>
-					<p class="teaser">Maximize your cybersecurity defenses by conducting free phishing tests on your employees and empowering them to recognize and avoid phishing attempts. No internal server required.</p>
+					<p class="teaser">Maximize your cybersecurity defenses by conducting free phishing tests on your employees and empowering them to recognize and avoid phishing attacks.</p>
 				</div>
 			</article>
 		</a>
