estimated reading time

--- a/biblical-inerrancy.html
+++ b/biblical-inerrancy.html
@@ -67,7 +67,7 @@
 
 	<main>
 		<h1>Biblical Inerrancy</h1>
-		<p class="date">Posted on May 28, 2020</p>
+		<p class="date">Posted on May 28, 2020 • 30-minute read</p>
 		<figure class="cover">
 			<img src="blog-posts/inerrancy-cover.jpg" alt="Cole, Thomas. The Garden of Eden. 1828. Oil on canvas. Amon Carter Museum of American Art, Fort Worth, Texas.">
 			<figcaption>Cole, Thomas. The Garden of Eden. 1828. Oil on canvas. Amon Carter Museum of American Art, Fort Worth, Texas.</figcaption>
