--- a/binomials.html
+++ b/binomials.html
@@ -73,7 +73,7 @@
 
 	<main>
 		<h1>A Gradient-Based Approach to Solving Mixed Binomial Distributions</h1>
-		<p class="date">Posted on September 4, 2024</p>
+		<p class="date">Posted on September 4, 2024 • 5-minute read</p>
 		<figure class="cover">
 			<img src="blog-posts/binomial-cover.jpg" alt="A chalkboard with math">
 		</figure>
