--- a/blog.html
+++ b/blog.html
@@ -56,6 +56,7 @@
 				<div>
 					<h2>A Gradient-Based Approach to Solving Mixed Binomial Distributions</h2>
 					<p class="teaser">Determine the individual probabilities of multiple binomial distributions when given their combined probability mass function using gradient descent.</p>
+					<span class="est-read-time">5</span>
 				</div>
 			</article>
 		</a>
@@ -69,6 +70,7 @@
 				<div>
 					<h2>How Mistaking Power for Energy Almost Cost Millions</h2>
 					<p class="teaser">Learn how pedanticism and collaborative physics ensured rural farmers' access to affordable, renewable electricity, and how you can understand the difference between power and energy.</p>
+					<span class="est-read-time">25</span>
 				</div>
 			</article>
 		</a>
@@ -82,6 +84,7 @@
 				<div>
 					<h2>Nairobi Bound: A Comprehensive Guide for Americans Starting a New Life in Kenya's Capital</h2>
 					<p class="teaser">When I moved to Kenya in February 2022, I had never been to Africa. This is a collection of everything I wish I knew before I moved.</p>
+					<span class="est-read-time">40</span>
 				</div>
 			</article>
 		</a>
@@ -95,6 +98,7 @@
 				<div>
 					<h2>Phishing Prevention on a Budget: How to Test and Train Your Employees for Free</h2>
 					<p class="teaser">Maximize your cybersecurity defenses by conducting free phishing tests on your employees and empowering them to recognize and avoid phishing attacks.</p>
+					<span class="est-read-time">10</span>
 				</div>
 			</article>
 		</a>
@@ -108,6 +112,7 @@
 				<div>
 					<h2>I2R Losses in Single- and Three-Phase Distribution Networks</h2>
 					<p class="teaser">How unbalanced do loads on a three-phase distribution network have to be to warrant reconfiguring the network to be single-phase?</p>
+					<span class="est-read-time">15</span>
 				</div>
 			</article>
 		</a>
@@ -121,6 +126,7 @@
 				<div>
 					<h2>15 Steps to Donate a Kidney</h2>
 					<p class="teaser">The best decision I ever made was to donate my left kidney to a stranger. I kept a detailed journal of the entire experience, from the idea's inception to my surgery and recovery.</p>
+					<span class="est-read-time">45</span>
 				</div>
 			</article>
 		</a>
@@ -147,6 +153,7 @@
 				<div>
 					<h2>The MIT MechE Qualifying Exam Fails Women</h2>
 					<p class="teaser">Half of all women who failed the MIT Mechanical Engineering doctoral qualifying examination would likely have passed if they were men. Note: clicking on this link will redirect you to the article in <i>The Tech</i>, MIT's school newspaper.</p>
+					<span class="est-read-time">6</span>
 				</div>
 			</article>
 		</a>
@@ -160,6 +167,7 @@
 				<div>
 					<h2>Common Public Speaking Problems and Exercises to Fix Them</h2>
 					<p class="teaser">Swallow a tablespoon of honey. Then, rehearse while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall.</p>
+					<span class="est-read-time">5</span>
 				</div>
 			</article>
 		</a>
@@ -173,6 +181,7 @@
 				<div>
 					<h2>Biblical Inerrancy</h2>
 					<p class="teaser">I grew up believing that everything written in the Bible was literally true. I aim to guide a deconstruction of biblical inerrancy and provide an alternative view in which I have found freedom.</p>
+					<span class="est-read-time">30</span>
 				</div>
 			</article>
 		</a>
@@ -186,6 +195,7 @@
 				<div>
 					<h2>Graduate Student Mental Health is in Crisis</h2>
 					<p class="teaser">MIT graduate students need immediate action to improve access to mental health care and address root causes. Note: clicking on this link will redirect you to the article in <i>The Tech</i>, MIT's school newspaper.</p>
+					<span class="est-read-time">8</span>
 				</div>
 			</article>
 		</a>
@@ -199,6 +209,7 @@
 				<div>
 					<h2>Gospel Authorship</h2>
 					<p class="teaser">In the quest to understand the origins of the four canonical Gospels, a puzzling mystery emerges—none of the authors are confirmed to have personally met Jesus.</p>
+					<span class="est-read-time">25</span>
 				</div>
 			</article>
 		</a>
