--- a/gospel-authorship.html
+++ b/gospel-authorship.html
@@ -67,7 +67,7 @@
 
 	<main>
 		<h1>Gospel Authorship</h1>
-		<p class="date">Posted on April 15, 2018</p>
+		<p class="date">Posted on April 15, 2018 • 25-minute read</p>
 		<figure class="cover">
 			<img src="blog-posts/gospels-cover.jpg" alt="Campagnola, Domenico. Saint Jerome in a Landscape. 1530. Pen and brown ink. The Cleveland Museum of Art, The Charles W. Harkness Endowment Fund.">
 			<figcaption>Campagnola, Domenico. Saint Jerome in a Landscape. 1530. Pen and brown ink. The Cleveland Museum of Art, The Charles W. Harkness Endowment Fund.</figcaption>
