--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -67,7 +67,7 @@
 
 	<main>
 		<h1>Nairobi Bound: A Comprehensive Guide for Americans Starting a New Life in Kenya's Capital</h1>
-		<p class="date">Posted on May 24, 2023. Cowritten with a friend. Updated as I learn more.</p>
+		<p class="date">Posted on May 24, 2023. Cowritten with a friend. Updated as I learn more. 40-minute read.</p>
 		<figure class="cover">
 			<img src="blog-posts/kenya-cover.jpg" alt="My friends and I on Mount Longonot">
 		</figure>
