--- a/line-losses.html
+++ b/line-losses.html
@@ -73,7 +73,7 @@
 
 	<main>
 		<h1>I2R Losses in Single- and Three-Phase Distribution Networks</h1>
-		<p class="date">Posted on March 4, 2023</p>
+		<p class="date">Posted on March 4, 2023 • 15-minute read</p>
 		<figure class="cover">
 			<img src="blog-posts/losses-cover.jpg" alt="Photo CC0: Kistler, Ken. 'Electric Power Lines At Sunset.'">
 			<figcaption>Photo CC0: Kistler, Ken. "Electric Power Lines At Sunset."</figcaption>
