--- a/power-vs-energy.html
+++ b/power-vs-energy.html
@@ -73,7 +73,7 @@
 
 	<main>
 		<h1>How Mistaking Power for Energy Almost Cost Millions</h1>
-		<p class="date">Posted on October 6, 2023</p>
+		<p class="date">Posted on October 6, 2023 • 25-minute read</p>
 		<figure class="cover">
 			<img src="blog-posts/power-vs-energy-cover.jpg" alt="A solar mini-grid">
 			<figcaption>Photo Credit: Deutsche Gesellschaft für Internationale Zusammenarbeit (GIZ) GmbH</figcaption>
