--- a/public-speaking-problems.html
+++ b/public-speaking-problems.html
@@ -67,7 +67,7 @@
 
 	<main>
 		<h1>Common Public Speaking Problems and Exercises to Fix Them</h1>
-		<p class="date">Posted on July 25, 2020</p>
+		<p class="date">Posted on July 25, 2020 • 5-minute read</p>
 		<figure class="cover">
 			<img src="blog-posts/speaking-cover.jpg" alt="Photo CC BY-NC: Rostron, Allan. 'Audience.' 2013.">
 			<figcaption>Photo CC BY-NC: Rostron, Allan. "Audience." 2013.</figcaption>
