kenya housing edits

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -110,9 +110,9 @@
 			<h2>Housing</h2>
 			<p>Facebook groups are a great tool to find housing. Avoid the Kenya Craigslist.</p>
 
-			<p>Neighborhoods I would recommend: Parklands, Westlands, Kilimani, Lavington, Kilileshwa, New Kitisuru, and Spring Valley. These are nice, affordable compared to many U.S. cities, and near fun nightlife. For example, I live in Spring Valley in a mansion in a gated community with three flatmates. The rent is $830 per month and includes a gardener, house help that comes three times a week, a backup generator for load shedding, and basic utilities. It's by far the nicest place I've ever lived for one of the cheapest rents.</p>
+			<p>Neighborhoods I would recommend: Parklands, Westlands, Kilimani, Lavington, Kilileshwa, New Kitisuru, and Spring Valley. These are nice, affordable compared to many U.S. cities, and near fun nightlife. For example, the first place I lived in Kenya was a mansion in a gated community in Spring Valley with three flatmates. The rent was $830 per month and included a gardener, house help that came three times a week, a backup generator for load shedding, and basic utilities. It's by far the nicest place I've ever lived for one of the cheapest rents.</p>
 
-			<p>There are even nicer neighborhoods in Nairobi: Karen, Runda, Muthaiga, and Gigiri. They tend to be further away from the city center and thus quieter, more like extravagant suburbs. There are also plenty of less expensive places like Githurai and Mitini if you like living in denser mixed-use/apartment buildings.</p>
+			<p>There are even nicer neighborhoods in Nairobi: Karen, Runda, Muthaiga, Loresho, and Gigiri. They tend to be further away from the city center and thus quieter, more like extravagant suburbs. There are also plenty of less expensive places like Githurai and Mitini if you like living in denser mixed-use/apartment buildings.</p>
 		</section>
 
 		<section id="Utilities">
