--- a/selected-work.html
+++ b/selected-work.html
@@ -145,7 +145,7 @@
 				<img src="selected-work/tinynets.jpg" alt="PCB held against a purple background">
 				<div class="proj-overlay">
 					<div class="hashtags">#distributed-systems #networking</div>
-					<h2>TinyNets</h2>
+					<h2>Lightweight Networking for Control Systems</h2>
 				</div>
 			</a>
 			
