--- a/tinynets.html
+++ b/tinynets.html
@@ -7,12 +7,12 @@
 
 	<!-- SEO Description -->
 	<meta name="author" content="Nicholas S. Selby">
-	<meta name="description" content="TinyNets: A Lightweight Networking Strategy for Robotic Control Systems">
+	<meta name="description" content="Lightweight Networking Strategy for Robotic Control Systems">
 	<link rel="canonical" href="https://rupumped.github.io/tinynets.html">
 
 	<!-- Open Graph Tags -->
 	<meta property="og:title" content="TinyNets">
-	<meta property="og:description" content="TinyNets: A Lightweight Networking Strategy for Robotic Control Systems">
+	<meta property="og:description" content="Lightweight Networking Strategy for Robotic Control Systems">
 	<meta property="og:image" content="https://rupumped.github.io/project-pages/tinynets-cover.jpg">
 	<meta property="og:image:width" content="1920">
 	<meta property="og:image:height" content="768">
@@ -52,7 +52,7 @@
 	<main>
 		<div class="cover section">
 			<img src="project-pages/tinynets-cover.jpg" alt="A physical network implemented on breadboards">
-			<h1 id="tinynets-title">TinyNets: Lightweight Networking for Control Systems</h1>
+			<h1 id="tinynets-title">Lightweight Networking for Control Systems</h1>
 		</div>
 
 		<section id="skills-demonstrated">
