--- a/eqr.html
+++ b/eqr.html
@@ -67,7 +67,7 @@
 
 		<div class="separator"></div>
 
-		<p class="disclaimer">The following is from the <a rel="external" href="https://rupumped.github.io/EQR/" target="_blank">project website</a>.</p>
+		<p class="disclaimer">This is a summary of EmergencyQR for my personal portfolio. To learn more and make your own EQR for free, visit the <a rel="external" target="_blank" href="https://rupumped.github.io/EQR/">project homepage</a>.</p>
 
 		<p>It's important to keep certain medical information readily available in case of emergencies. The worst-case scenario of an emergency ambulance response is that the crew knows nothing about the patient. If the patient is unresponsive, emergency responders can only try their best to treat life-threatening signs and symptoms. In an emergency, information can make the difference between life and death.</p>
 
