rename kenya psu label

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -132,7 +132,7 @@
 			</figure>
 
 			<figure>
-				<img class="img-center" style="width: 24cm;" src="blog-posts/psu-label.jpg" alt="Power supply label">
+				<img class="img-center" style="width: 24cm;" src="blog-posts/kenya-psu-label.jpg" alt="Power supply label">
 				<figcaption>Source: Fizz, <a rel="external" target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>, via <a rel="external" target="_blank" href="https://superuser.com/a/977605">SuperUser</a>. If the power supply label on your appliance lists the input as including 240 VAC or V~ and 50 Hz, like this one does, then it will work in Kenya. If it instead reads something like "INPUT: 120 VAC 60 Hz," then it will not.</figcaption>
 			</figure>
 
