fix broken links

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 					<div class="desc">
 						<a href="homepage/xducer.pdf" download target="_blank"><h2>Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers</h2></a><br>
 						David Torello, Nicholas Selby, Jin-Yeon Kim, Jianmin Qu, and Laurence J. Jacobs<br>
-						<a class="journal-name" rel="external" href="https://www.journals.elsevier.com/ultrasonics" target="_blank">Ultrasonics</a> 81, 107–117, 2017<br>
+						<a class="journal-name" rel="external" href="https://www.sciencedirect.com/journal/ultrasonics" target="_blank">Ultrasonics</a> 81, 107–117, 2017<br>
 						[<a href="homepage/xducer.bib" aria-label="BibTeX for paper titled &quot;Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers&quot;" target="_blank">BibTeX</a>] [<a href="ndte.html" aria-label="Project page for paper titled &quot;Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers&quot;">project page</a>]
 					</div>
 				</article>
@@ -188,7 +188,7 @@
 					<div class="desc">
 						<a href="homepage/dualaxis.pdf" download target="_blank"><h2><i>In Situ</i> Biaxial Rotation at Low-Temperatures in High Magnetic Fields</h2></a><br>
 						Nicholas Selby, Matthew Crawford, Lisa Tracy, John L. Reno, and Wei Pan<br>
-						<a class="journal-name" rel="external" href="https://aip.scitation.org/journal/rsi" target="_blank">Review of Scientific Instruments</a> 85 (9), 095116, 2014<br>
+						<a class="journal-name" rel="external" href="https://pubs.aip.org/aip/rsi" target="_blank">Review of Scientific Instruments</a> 85 (9), 095116, 2014<br>
 						[<a href="homepage/dualaxis.bib" aria-label="BibTeX for paper titled &quot;In Situ Biaxial Rotation at Low-Temperatures in High Magnetic Fields&quot;" target="_blank">BibTeX</a>] [<a href="lowtemp.html" aria-label="Project page for paper titled &quot;In Situ Biaxial Rotation at Low-Temperatures in High Magnetic Fields&quot;">project page</a>]
 					</div>
 				</article>
@@ -260,7 +260,7 @@
 					<img src="homepage/2160.jpg" title="Credit: NASA/JPL/Cornell University, Maas Digital LLC" alt="Mars rover">
 					<div class="desc">
 						<h2>Identification, Estimation, and Learning</h2><br>
-						<i>Massachusetts Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Identification, Estimation, and Learning&quot;" rel="external" href="https://ocw.mit.edu/courses/mechanical-engineering/2-160-identification-estimation-and-learning-spring-2006/" target="_blank">2.160</a>, <i>Fall 2019</i><br>
+						<i>Massachusetts Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Identification, Estimation, and Learning&quot;" rel="external" href="https://ocw.mit.edu/courses/2-160-identification-estimation-and-learning-spring-2006/" target="_blank">2.160</a>, <i>Fall 2019</i><br>
 						Key Concepts: machine learning, Kalman filters, system identification<br>
 						Median Student Evaluation: 7/7
 					</div>
@@ -272,7 +272,7 @@
 					<img src="homepage/2140.jpg" title="Credit: Ti Consiglio un Lavoro" alt="Students interacting with a circuit and oscilloscope">
 					<div class="desc">
 						<h2>Analysis and Design of Feedback Control Systems</h2><br>
-						<i>Massachusetts Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Analysis and Design of Feedback Control Systems&quot;" rel="external" href="https://ocw.mit.edu/courses/mechanical-engineering/2-14-analysis-and-design-of-feedback-control-systems-spring-2014/" target="_blank">2.140</a>, <i>Spring 2017</i><br>
+						<i>Massachusetts Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Analysis and Design of Feedback Control Systems&quot;" rel="external" href="https://ocw.mit.edu/courses/2-14-analysis-and-design-of-feedback-control-systems-spring-2014/" target="_blank">2.140</a>, <i>Spring 2017</i><br>
 						Key Concepts: time and frequency domain analysis, root locus and loop shaping, stability, nonlinearity, digital systems<br>
 						Median Student Evaluation: 7/7
 					</div>
@@ -284,7 +284,7 @@
 					<img src="homepage/cs1371.jpg" title="Credit: GTW" alt="Computer showing code in a text editor">
 					<div class="desc">
 						<h2>Computer Science for Engineers</h2><br>
-						<i>Georgia Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Computer Science for Engineers&quot;" rel="external" href="https://www.cc.gatech.edu/fac/David.Smith/CS1371_2018_Fall_Syllabus.pdf" target="_blank">CS 1371</a>, <i>Spring 2013–Spring 2016</i><br>
+						<i>Georgia Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Computer Science for Engineers&quot;" rel="external" href="https://sites.cc.gatech.edu/fac/David.Smith/CS1371_2018_Fall_Syllabus.pdf" target="_blank">CS 1371</a>, <i>Spring 2013–Spring 2016</i><br>
 						Key Concepts: MATLAB, computing fundamentals, algorithms<br>
 						Median Student Evaluation: 5/5
 					</div>
